# edge-ai-satellite-triage

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
.streamlit/: config.toml
docs/: index.html
scripts/: retrain_pipeline.py  train_cloud_mask.py
src/edge_triage/: __init__.py  __main__.py  agent.py  audit.py  config.py  data_ingest.py  detection.py  detection_classes.py  inference.py  live_data.py  metrics.py  model_registry.py  reasoning_loop.py  secrets_store.py  ship_detector.py  triage.py  utils.py
tests/: test_triage.py
